# tegic

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt  tegic.cpp  tegic.hpp
Source/tegic/: digits.cpp  digits.hpp
Sources/: tegic.cpp  tegic.hpp
Sources/tegic/: digits.hpp
Tests/: CMakeLists.txt  tegic.test.cpp
